--- a/styles/style.css
+++ b/styles/style.css
@@ -196,6 +196,16 @@ h2 {
 	font-weight: 600;
 }
 
+h3 {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 0.9em;
+	font-weight: 600;
+}
+
+.bold {
+	font-weight: 800;
+}
+
 .clear {
 	clear: both;
 }
@@ -441,6 +451,10 @@ footer {
 
 /* ---------- ADMIN ---------- */
 
+.admin-main-content {
+	padding: 30px;
+}
+
 .admin-font {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 0.8em;
@@ -460,8 +474,13 @@ input[type=text] {
 }
 
 h2.admin {
-	padding: 30px 0 0 30px;
+	margin-bottom: 30px;
 	color: #555;
+}
+
+h3.admin {
+	margin: 20px 0;
+	color: #ff0000;
 }
 
 /* ---------- END OF ADMIN ---------- */
