--- a/styles/style.css
+++ b/styles/style.css
@@ -202,6 +202,12 @@ h3 {
 	font-weight: 600;
 }
 
+p {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 0.8em;
+	font-weight: 400;
+}
+
 .bold {
 	font-weight: 800;
 }
@@ -228,8 +234,9 @@ h3 {
 }
 
 .hidden-menu {
-	background-image:url('../images/nav.png');
-	height: auto;
+	background-image:url('../images/nav.png'); /* PRODUCTION */
+/*	background-image:url('../photography/images/nav.png');
+*/	height: auto;
 	display: none;
 	width: 170px;
 }
@@ -512,6 +519,15 @@ h2.admin {
 h3.admin {
 	margin: 20px 0;
 	color: #ff0000;
+}
+
+p.admin {
+	display: inline;
+}
+
+.thumbnail {
+	display: inline-block;
+	padding: 15px;
 }
 
 /* ---------- END OF ADMIN ---------- */
