--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ table {
 /* ---------- END CSS RESET ---------- */
 
 
-body {
+body, html {
 	background-color: #121214;
 	width: 100%;
 	height: 100%;
@@ -62,7 +62,8 @@ body {
 .admin-main {
 	background-color: #fff;
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
+	height:auto;
 }
 
 @font-face
@@ -216,10 +217,6 @@ p {
 	clear: both;
 }
 
-.container {
-	height: 100%;
-	width: 100%;
-}
 
 
 /* ---------- DROPDOWN MENU ---------- */
@@ -320,8 +317,8 @@ header {
 .main-content {
 	position: absolute;
 	top: 10%;
-	height: 80%;
 	width: 100%;
+	height: 80%;
 }
 
 .main {
@@ -329,17 +326,69 @@ header {
 	top: 10%;
 	/*height: 80%;*/
 	height: auto;
-	padding-bottom: 8%;
+	padding-bottom: 10%;
 }
 
-footer {
+
+
+/* ---------- FIXED FOOTER ---------- */
+
+footer.fixed {
 	position: fixed;
 	bottom: 0;
 	background-color: #191919;
 	width: 100%;
 	height: 10%;
+	text-align: center;
+	margin: 0 auto;
+	display: block;
 
 }
+
+footer.fixed p {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1em;
+	color: #555;
+	padding-top: 15px;
+}
+
+/* ---------- END OF FIXED FOOTER ---------- */
+
+
+
+/* ---------- STICKY FOOTER ---------- */
+
+.container {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -10%;
+}
+
+footer, .push {
+	height: 10%;
+}
+
+footer {
+	background-color: #121214;
+	text-align: center;
+	margin: 0 auto;
+	display: block;
+}
+
+
+footer p {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1em;
+	color: #555;
+	padding-top: 15px;
+}
+
+/* ---------- END OF STICKY FOOTER ---------- */
+
+
+
+
 
 
 /* ---------- MEDIA QUERIES ---------- */
@@ -459,6 +508,7 @@ footer {
 
 .admin-main-content {
 	padding: 30px;
+	min-height: 80%;
 }
 
 .admin-menu-option {
